Add API to fetch admission of the encounter
