# openapi/oh.yaml
@@ -5848,6 +5848,28 @@ paths:
                   $ref: "#/components/schemas/EncounterDTO"
       security:
       - bearerAuth: []
+  /encounters/{code}/admissions:
+    get:
+      tags:
+      - Encounter
+      operationId: getOPDByEncounter
+      parameters:
+      - name: code
+        in: path
+        required: true
+        schema:
+          type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/AdmissionDTO"
+      security:
+      - bearerAuth: []
   /encounters/current/{patientId}:
     get:
       tags:
@@ -6756,9 +6778,9 @@ components:
           format: int32
           description: lock
           example: 0
-        male:
-          type: boolean
         pharmacy:
+          type: boolean
+        male:
           type: boolean
         female:
           type: boolean
