# src/main/java/org/isf/encounter/rest/EncounterController.java
@@ -24,6 +24,10 @@ package org.isf.encounter.rest;
 import java.util.List;
 import java.util.Objects;
 
+import org.isf.admission.dto.AdmissionDTO;
+import org.isf.admission.manager.AdmissionBrowserManager;
+import org.isf.admission.mapper.AdmissionMapper;
+import org.isf.admission.model.Admission;
 import org.isf.encounter.dto.EncounterDTO;
 import org.isf.encounter.mapper.EncounterMapper;
 import org.isf.encounter.manager.EncounterBrowserManager;
@@ -38,7 +42,6 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
-import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import io.swagger.v3.oas.annotations.security.SecurityRequirement;
@@ -55,14 +58,20 @@ public class EncounterController {
 	private final EncounterBrowserManager encounterBrowserManager;
 	private final EncounterMapper encounterMapper;
 	private final PatientBrowserManager patientBrowserManager;
+	private final AdmissionMapper admissionMapper;
+	private final AdmissionBrowserManager admissionBrowserManager;
 
 	public EncounterController(EncounterBrowserManager encounterBrowserManager,
 							   EncounterMapper encounterMapper,
-							   PatientBrowserManager patientBrowserManager
+							   PatientBrowserManager patientBrowserManager,
+							   AdmissionBrowserManager admissionBrowserManager,
+							   AdmissionMapper admissionMapper
 	) {
 		this.encounterBrowserManager = encounterBrowserManager;
 		this.encounterMapper = encounterMapper;
 		this.patientBrowserManager = patientBrowserManager;
+		this.admissionBrowserManager = admissionBrowserManager;
+		this.admissionMapper = admissionMapper;
 	}
 
 	@PostMapping(value = "/encounters")
@@ -135,5 +144,17 @@ public class EncounterController {
 
 		encounterBrowserManager.saveEncounter(encounterToUpdated);
 		return encounter;
+	}
+
+	@GetMapping("/encounters/{code}/admissions")
+	public List<AdmissionDTO> getOPDByEncounter(@PathVariable String code) throws OHServiceException {
+		Encounter encounter = encounterBrowserManager.getEncountersByCode(code);
+		if (encounter == null) {
+			throw new OHAPIException(new OHExceptionMessage("Encounter not found with code " + code), HttpStatus.NOT_FOUND);
+		}
+
+		List<Admission> admissionList = admissionBrowserManager.getAdmissionsByEncounter(encounter);
+
+		return admissionMapper.map2DTOList(admissionList);
 	}
 }
